# CanonIQ

./: .gitignore  README.md  app.py  pyproject.toml
sample_inputs/: ats.json  candidate.csv  github.json  linkedin.json  notes.txt  resume.txt
src/: __init__.py  cli.py
src/config/: canonical_skills.json  confidence_weights.json  default_projection.json  field_aliases.json  matching_weights.json  normalization_config.json  phone_settings.json  source_weights.json
src/models/: __init__.py  candidate.py  education.py  experience.py  schemas.py
src/parsers/: __init__.py  base_parser.py  common.py  csv_parser.py  github_parser.py  json_parser.py  linkedin_parser.py  notes_parser.py  resume_parser.py
src/pipeline/: confidence.py  config_store.py  extractor.py  field_mapping.py  loader.py  matcher.py  merger.py  normalization_engine.py  normalizer.py  projector.py  transformer.py  validation_engine.py  validator.py  writer.py
src/utils/: __init__.py  date_utils.py  email_utils.py  location_utils.py  phone_utils.py  skill_utils.py  string_similarity.py  text_utils.py
static/: script.js  style.css
templates/: index.html
tests/: conftest.py  test_integration.py  test_parsers.py  test_pipeline.py  test_regressions.py  test_resolution_engine.py  test_utils.py  test_webapp.py
ui/: controller.py  explain_dialog.py  json_highlighter.py  main_window.py
