[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eightfold-candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
  "pdfplumber>=0.11",
  "Flask>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = ".tmp/.pytest_cache"
addopts = "-p no:cacheprovider"
